# herzen-wake

./: .gitignore  README.md  pyproject.toml  wakeword_daemon_repo.md
docs/: README.md  architecture.md  current-state.md  open-questions.md  operations.md  protocol-contract.md  setup-and-run.md
scripts/: run_client.sh  run_dev.sh  wakeword_client.py
src/herzen_wake/: __init__.py  audio.py  config.py  daemon.py  protocol.py
tests/: test_config.py  test_daemon_cli.py  test_daemon_engine.py  test_protocol.py
