[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herzen-wake"
version = "0.1.0"
description = "Persistent local wakeword daemon for Herzen."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.4,<3",
  "openwakeword>=0.6,<0.7",
  "sounddevice>=0.5,<0.6",
]

[project.optional-dependencies]
dev = ["pytest>=9,<10"]

[project.scripts]
wakewordd = "herzen_wake.daemon:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
